# godaven-minyan-finder

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/godaven_minyan_finder/: __init__.py  cli.py  formatting.py  godaven.py  location.py  models.py
tests/: test_godaven.py
