[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godaven-minyan-finder"
version = "0.1.0"
description = "CLI and agent helper for finding nearby upcoming minyanim via GoDaven."
requires-python = ">=3.9"
dependencies = []
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Clark Valberg" }]
keywords = ["godaven", "minyan", "cli", "agent-skill"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.scripts]
godaven-minyan = "godaven_minyan_finder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
